realize mail send finish-registration
