# dossier/src/main/java/neoflex/chulkov/dto/EmailMessage.java
@@ -1,0 +1,13 @@
+package neoflex.chulkov.dto;
+
+import java.time.LocalDate;
+
+public record EmailMessage(
+        String firstName,
+        String lastName,
+        String middleName,
+        LocalDate birthday,
+        String email,
+        String statementId
+) {
+}
